feat: add the getting list of booth templates API (#26)
* feat: design schema

* feat: coding api save model

* feat: modify entity

* feat: modfiy entity

* feat: api save basic info exhibiton

* fix: can not update

* feat: coding

* clean: yarn lint

* feat: coding api

* fix: add plural

* fix: delete async and rename foreign key

* fix: handle feedback

* fix: handle feedback

* fix: max content length

* fix: delete async

* fix: handle feedback

* fix: catch error

* fix: delete unnessary

* fix: handle feedback

* fix: handle feedback

* feat: implement api get list booth template

* feat: implement api get list booth template

* feat: implement api get list booth template

* feat: implement api get list booth template

* feat: delete file unneccessary

* feat: implement api

* fix: handle feedback
