# pkg/src/components/exhibition/dto/booth-template-list.dto.ts
@@ -1,0 +1,19 @@
+/**
+ * COMPAON API
+ * API definition for COMPAON
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: compaon@dalavina.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { BoothTemplate } from './booth-template.dto';
+
+export interface BoothTemplateList {
+    offset?: number;
+    limit?: number;
+    total?: number;
+    booth_templates?: Array<BoothTemplate>;
+}
