# pkg/src/components/exhibition/dto/booth-template.dto.ts
@@ -1,0 +1,18 @@
+/**
+ * COMPAON API
+ * API definition for COMPAON
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: compaon@dalavina.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+export interface BoothTemplate {
+    readonly id: number;
+    name?: string;
+    readonly model_id?: number;
+    readonly thumbnail_id?: number;
+}
